fix: Complete i18n implementation - greetings, subtitles, contact labels
- Add i18n support for time-based greetings in app.js
- Fix updateFormalAddressTexts to use i18n when available
- Add data-i18n attributes to About, Contact sections
- Simplify English translations (no du/sie variants needed)
- Add ?lang=en query parameter support for local development
- Use absolute paths for i18n JSON files

--- a/dashboard/i18n/de.json
+++ b/dashboard/i18n/de.json
@@ -161,11 +161,12 @@
     }
   },
   "contact": {
-    "title": "Kontakt",
+    "title": "Kontakt & Hilfe",
     "subtitle": {
       "du": "Wir sind für dich da",
       "sie": "Wir sind für Sie da"
     },
+    "host": "Gastgeber",
     "phone": "Telefon",
     "email": "E-Mail",
     "address": "Adresse",
