--- a/dashboard/i18n/en.json
+++ b/dashboard/i18n/en.json
@@ -23,26 +23,11 @@
       "night": "Good Night"
     },
     "default": "Welcome!",
-    "message": {
-      "du": "Welcome to this magical place. Please log in to begin your personal journey.",
-      "sie": "Welcome to this magical place. Please log in to begin your personal journey."
-    },
-    "enjoy": {
-      "du": "Enjoy every moment!",
-      "sie": "Enjoy every moment!"
-    },
-    "daysRemaining": {
-      "du": "{days} day(s) left until departure. Let yourself be enchanted!",
-      "sie": "{days} day(s) left until departure. Let yourself be enchanted!"
-    },
-    "lastDay": {
-      "du": "Tomorrow begins a new path. We hope this place has touched your heart.",
-      "sie": "Tomorrow begins a new path. We hope this place has touched your heart."
-    },
-    "stay": {
-      "du": "May this place give you strength and grant you peace.",
-      "sie": "May this place give you strength and grant you peace."
-    }
+    "message": "Welcome to this magical place. Please log in to begin your personal journey.",
+    "enjoy": "Enjoy every moment!",
+    "daysRemaining": "{days} day(s) left until departure. Let yourself be enchanted!",
+    "lastDay": "Tomorrow begins a new path. We hope this place has touched your heart.",
+    "stay": "May this place give you strength and grant you peace."
   },
   "about": {
     "title": "About This Place",
@@ -73,10 +58,7 @@
   },
   "amenities": {
     "title": "Amenities",
-    "subtitle": {
-      "du": "For your comfort",
-      "sie": "For your comfort"
-    }
+    "subtitle": "For your comfort"
   },
   "comingSoon": {
     "title": "In Progress",
@@ -161,11 +143,9 @@
     }
   },
   "contact": {
-    "title": "Contact",
-    "subtitle": {
-      "du": "We're here for you",
-      "sie": "We're here for you"
-    },
+    "title": "Contact & Help",
+    "subtitle": "We're here for you",
+    "host": "Host",
     "phone": "Phone",
     "email": "Email",
     "address": "Address",
