--- a/dashboard/i18n/de.json
+++ b/dashboard/i18n/de.json
@@ -47,10 +47,12 @@
   "about": {
     "title": "Über diesen Ort",
     "subtitle": "Wo Magie und Natur sich vereinen",
+    "intro": "Hier, am Rand des Waldes, hat sich ein besonderer Platz entfaltet – ein Ort zum Innehalten, zum Auftanken und zum Wiederfinden. Die alten Bäume flüstern ihre Geschichten, die Feuerstelle lädt zu stillen Momenten unter dem Sternenhimmel ein.",
     "fireplace": "🔥 Die Feuerstelle",
-    "fireplaceText": "Hier kannst du zur Ruhe kommen, Geschichten teilen und dem Knistern des Feuers lauschen.",
+    "fireplaceText": "Hier kannst du zur Ruhe kommen, die Flammen beobachten und einfach sein. Ein Ort der Wärme und Geborgenheit.",
     "forest": "🌲 Der Wald",
-    "forestText": "Direkt neben uns erstreckt sich die Natur in ihrer reinsten Form – ideal für Spaziergänge, Meditation oder stilles Beobachten.",
+    "forestText": "Direkt neben uns erstreckt sich die Natur in ihrer ganzen Kraft. Lass dich einladen zu Spaziergängen, die den Geist klären und das Herz öffnen.",
+    "outro": "Dieser Platz ist mehr als ein Ort zum Übernachten – er ist eine Einladung, wieder mit dir selbst und der Natur in Verbindung zu treten.",
     "welcome": "Willkommen, Gast auf Erden."
   },
   "info": {
