Empfehlungen verbessert: Kategorie-Persistenz, Heurige, kompaktere Darstellung
- Kategorie wird jetzt in localStorage gespeichert und nach Reload wiederhergestellt
- Neue Kategorie 'Heurige' (Wine Taverns) mit speziellen Keywords
- Kompaktere Card-Darstellung: weniger Whitespace, mehr Einträge sichtbar
- Kürzere Button-Texte ('Route' statt 'Navigation starten')
- Telefonnummern jetzt direkt auf dem Button angezeigt
- Kategorie-Filter Reihenfolge optimiert
- i18n Übersetzungen für Heurige (DE/EN)

--- a/dashboard/i18n/de.json
+++ b/dashboard/i18n/de.json
@@ -169,8 +169,9 @@
     "filter": {
       "all": "Alle",
       "attractions": "Sehenswürdigkeiten",
-      "spas": "Thermen",
-      "restaurants": "Restaurants"
+      "restaurants": "Restaurants",
+      "heurige": "Heurige",
+      "spas": "Thermen"
     }
   },
   "contact": {
