fix: Angemeldet bleiben Checkbox für Gast-Login
- Checkbox 'Angemeldet bleiben' hinzugefügt (standardmäßig aktiviert)
- Wenn aktiviert: localStorage (persistent über Browser-Sessions)
- Wenn deaktiviert: sessionStorage (wird bei Tab-Schließen gelöscht)
- loadGuestSession prüft jetzt beide Storage-Typen
- Logout löscht beide Storage-Typen
- i18n Übersetzungen hinzugefügt (DE/EN)
- Service Worker Cache Version erhöht (v16)

--- a/dashboard/i18n/de.json
+++ b/dashboard/i18n/de.json
@@ -219,6 +219,7 @@
     "codePlaceholder": "z.B. GAST-2024-001",
     "submit": "Anmelden",
     "cancel": "Abbrechen",
+    "rememberMe": "Angemeldet bleiben",
     "error": "Ungültiger Zugangscode",
     "success": "Erfolgreich angemeldet!"
   },
