feat: Calculate Kurtaxe for logged-in guest (nights × persons), v0.9.1

--- a/dashboard/i18n/de.json
+++ b/dashboard/i18n/de.json
@@ -268,6 +268,11 @@
       "du": "Die Ortstaxe (Kurtaxe) ist eine gesetzliche Abgabe und wird direkt an die Gemeinde abgeführt.",
       "sie": "Die Ortstaxe (Kurtaxe) ist eine gesetzliche Abgabe und wird direkt an die Gemeinde abgeführt."
     },
-    "perPersonNight": "pro Person / Nacht"
+    "perPersonNight": "pro Person / Nacht",
+    "yourStay": {
+      "du": "Für deinen Aufenthalt:",
+      "sie": "Für Ihren Aufenthalt:"
+    },
+    "total": "Gesamt:"
   }
 }
