ux: Rename Energy to Costs, move to right in nav

--- a/dashboard/i18n/de.json
+++ b/dashboard/i18n/de.json
@@ -13,7 +13,8 @@
     "weather": "Wetter",
     "recommendations": "Empfehlungen",
     "energy": "Energie",
-    "wifi": "WiFi"
+    "wifi": "WiFi",
+    "costs": "Kosten"
   },
   "welcome": {
     "greeting": {
