feat: add free laundry info to quick info section

--- a/dashboard/i18n/de.json
+++ b/dashboard/i18n/de.json
@@ -69,6 +69,8 @@
     "keysValue": "Schlüsselbox",
     "pets": "Haustiere",
     "petsValue": "Erlaubt",
+    "laundry": "Waschmaschine",
+    "laundryValue": "Kostenlos",
     "smoking": "Rauchen",
     "smokingValue": "Verboten",
     "parking": "Parken",
