--- a/dashboard/i18n/en.json
+++ b/dashboard/i18n/en.json
@@ -69,6 +69,8 @@
     "keysValue": "Key box",
     "pets": "Pets",
     "petsValue": "Allowed",
+    "laundry": "Washing Machine",
+    "laundryValue": "Free",
     "smoking": "Smoking",
     "smokingValue": "Prohibited",
     "parking": "Parking",
