feat: add included utilities info (gas, wood, pellets)

--- a/dashboard/i18n/de.json
+++ b/dashboard/i18n/de.json
@@ -71,6 +71,8 @@
     "petsValue": "Erlaubt",
     "laundry": "Waschmaschine",
     "laundryValue": "Kostenlos",
+    "included": "Inklusive",
+    "includedValue": "Betriebskosten, Gas, Holz & Pellets",
     "smoking": "Rauchen",
     "smokingValue": "Verboten",
     "parking": "Parken",
